Bug 301480 - Esc does not cancel inline rename
Summary: Esc does not cancel inline rename
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (show other bugs)
Version: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-09 01:06 UTC by Christoph Feck
Modified: 2012-06-09 11:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In: 4.9.0


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2012-06-09 01:06:17 UTC
Esc does not cancel inline rename
Comment 1 Peter Penz 2012-06-09 11:12:59 UTC
Git commit 1cf4601d83263faf70211c8451afa4f70e912ae2 by Peter Penz.
Committed on 09/06/2012 at 13:01.
Pushed by ppenz into branch 'master'.

Inline renaming: ESC should cancel the renaming

When emitting the roleEditingCanceled-signal it must be prevented
that a roleEditingFinished-signal is emitted because of some
action taken in the receiver-slot.
FIXED-IN: 4.9.0

M  +4    -4    dolphin/src/kitemviews/kstandarditemlistwidget.cpp
M  +18   -4    dolphin/src/kitemviews/private/kitemlistroleeditor.cpp
M  +8    -1    dolphin/src/kitemviews/private/kitemlistroleeditor.h

http://commits.kde.org/kde-baseapps/1cf4601d83263faf70211c8451afa4f70e912ae2