Inline renaming: ESC should cancel the renaming

When emitting the roleEditingCanceled-signal it must be prevented
that a roleEditingFinished-signal is emitted because of some
action taken in the receiver-slot.

BUG: 301480
FIXED-IN: 4.9.0